# life-c

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  game.c  grid.c  grid.h  main.c
src/: CMakeLists.txt  game.c  game.h  grid.c  grid.h  main.c
